pod2.yaml
apiVersion: v1
kind: Pod
metadata:
 name: my-nginx2
 labels:
  app: nginx2
  cluster: prod
spec:
 containers:
 - name: nginx-container
   image: nginx:1.10
