pod_cm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-app
spec:
  containers:
  - name: demo-app
    image: gcr.io/google-samples/node-hello:1.0
