pod_pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-pvc
spec:
  containers:
  - image: nginx
    name: web-server
    volumeMounts:
    - mountPath: /cache
      name: cache-volume

  volumes:
  - name: cache-volume
    persistentVolumeClaim:
      claimName: pvc-slow
