pod_sa.yaml
apiVersion: v1
kind: Pod
metadata:
 name: nginx
 namespace: kube-system
spec:
  containers:
  - name: nginx
    image: nginx
  serviceAccountName: coredns
