pod_sec.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-app
spec:
  containers:
  - name: sec-app
    image: gcr.io/google-samples/node-hello:1.0
