pod_shared_data.yaml
apiVersion: v1
kind: Pod
metadata:
  name: two-containers
  labels:
    app: web-server
spec:
  restartPolicy: Never

  volumes:
    - name: shared-data
      emptyDir: { }

  containers:
    - name: first-container
      image: nginx
      volumeMounts:
        - name: shared-data
          mountPath: /usr/share/nginx/html
    - name: second-container
      image: debian
      volumeMounts:
        - name: shared-data
          mountPath: /pod-data
      command: ["/bin/sh"]
      args: ["-c", "while true;do data > /pod-data/index.html 2>&1  ;sleep 2;done"]
