allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-allow
  namespace: default
spec:
 podSelector:
   matchLabels:
     app: database
 ingress:
 - from:
   - podSelector:
       matchLabels:
         app: app
   ports:
   - port: 5432
